[gd_scene load_steps=3 format=2]

[ext_resource path="res://box_container.gd" type="Script" id=1]
[ext_resource path="res://color_rect_item.gd" type="Script" id=2]

[node name="BoxContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 600, 600 )
color = Color( 0.145098, 0.145098, 0.145098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="BackGround"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BackGround/HBoxContainer"]
margin_right = 666.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 30
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BackGround/HBoxContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 666.0
margin_bottom = 145.0
custom_constants/separation = 31
alignment = 1

[node name="ColorRect" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 21.0
margin_right = 121.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 152.0
margin_right = 252.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect2"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 283.0
margin_right = 383.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect3"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 414.0
margin_right = 514.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect4"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 545.0
margin_right = 645.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect5"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="BackGround/HBoxContainer/VBoxContainer"]
margin_top = 175.0
margin_right = 666.0
margin_bottom = 275.0
custom_constants/separation = 31
alignment = 1

[node name="ColorRect" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 21.0
margin_right = 121.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 152.0
margin_right = 252.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect2"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 283.0
margin_right = 383.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect3"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 414.0
margin_right = 514.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect4"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 545.0
margin_right = 645.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect5"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="BackGround/HBoxContainer/VBoxContainer"]
margin_top = 305.0
margin_right = 666.0
margin_bottom = 405.0
custom_constants/separation = 31
alignment = 1

[node name="ColorRect" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 21.0
margin_right = 121.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 152.0
margin_right = 252.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect2"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 283.0
margin_right = 383.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect3"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 414.0
margin_right = 514.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect4"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 545.0
margin_right = 645.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect5"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer4" type="HBoxContainer" parent="BackGround/HBoxContainer/VBoxContainer"]
margin_top = 435.0
margin_right = 666.0
margin_bottom = 535.0
custom_constants/separation = 31
alignment = 1

[node name="ColorRect" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 21.0
margin_right = 121.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 152.0
margin_right = 252.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect2"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 283.0
margin_right = 383.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect3"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 414.0
margin_right = 514.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect4"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 545.0
margin_right = 645.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OutLine" type="ColorRect" parent="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect5"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -55.0
margin_right = 55.0
margin_bottom = 55.0
rect_min_size = Vector2( 110, 110 )
color = Color( 0, 0.992157, 0.968627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerBackGround" type="ColorRect" parent="BackGround/HBoxContainer"]
margin_left = 670.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
color = Color( 0.278431, 0.466667, 0.603922, 1 )

[node name="ColorPicker" type="ColorPicker" parent="BackGround/HBoxContainer/ColorPickerBackGround"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -7.0
margin_bottom = -7.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="."]
margin_right = 339.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 15
text = "Hold down CTRL to select multiple Color Rects."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="BackGround" to="." method="_on_BackGround_mouse_entered"]
[connection signal="mouse_exited" from="BackGround" to="." method="_on_BackGround_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect2" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect2" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect2" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect2" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect3" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect3" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect3" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect3" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect4" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect4" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect4" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect4" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect5" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect5" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect5" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer/ColorRect5" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect2" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect2" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect2" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect2" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect3" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect3" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect3" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect3" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect4" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect4" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect4" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect4" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect5" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect5" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect5" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer2/ColorRect5" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect2" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect2" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect2" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect2" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect3" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect3" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect3" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect3" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect4" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect4" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect4" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect4" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect5" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect5" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect5" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer3/ColorRect5" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect2" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect2" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect2" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect2" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect3" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect3" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect3" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect3" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect4" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect4" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect4" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect4" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect5" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect5" method="_on_ColorRect_mouse_entered"]
[connection signal="mouse_exited" from="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect5" to="BackGround/HBoxContainer/VBoxContainer/HBoxContainer4/ColorRect5" method="_on_ColorRect_mouse_exited"]
[connection signal="mouse_entered" from="BackGround/HBoxContainer/ColorPickerBackGround" to="." method="_on_ColorPickerBackGround_mouse_entered"]
[connection signal="color_changed" from="BackGround/HBoxContainer/ColorPickerBackGround/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
